# lightweight

./: Cargo.toml  README.md  docker-compose.yml
core/: Cargo.toml
interface/grpc/services/: accounts.proto  exercises.proto
store/: Cargo.toml
store/migrations/: 20230709122624_create_accounts_table.down.sql  20230709122624_create_accounts_table.up.sql  20230908110034_create_exercise_tables.down.sql  20230908110034_create_exercise_tables.up.sql
store/src/repositories/: mod.rs
store/src/repositories/accounts/: contract.rs  implementation.rs  mod.rs  models.rs
store/src/repositories/exercises/: contract.rs  implementation.rs  mod.rs  models.rs
store/src/repositories/workouts/: contract.rs  implementation.rs  models.rs
web/: Cargo.toml  build.rs
web/config/: dev.yml  test.yml
web/src/: config.rs
web/src/controllers/: accounts.rs  exercises.rs  mod.rs
web/src/entry/: main.rs
web/src/protos/: accounts.rs  exercises.rs  mod.rs
web/tests/: accounts_controller_test.rs  exercise_controller_test.rs
web/tests/common/: mod.rs
