[package]
name = "lightweight_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flair_core = { version = "*", path = "../../flair/core" }
flair_derive = { version = "*", path = "../../flair/derive" }

tokio = { version = "1.32", features = ["rt-multi-thread", "time", "macros", "signal", "process"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-native-tls", "mysql", "chrono", "bigdecimal", "macros"] }
